<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayoutGrade"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_border_row"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <EditText
                android:id="@+id/input_title_grade_edit"
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:autofillHints="Noten beschrieb"
                android:ems="10"
                android:hint="@string/description"
                android:inputType="text"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/input_weight_grade_edit"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:autofillHints="Notengewichtung"
                android:ems="3"
                android:hint="@string/weight"
                android:inputType="numberDecimal"
                android:textSize="25sp"
                app:layout_constraintEnd_toStartOf="@+id/input_grade_grade_edit"
                app:layout_constraintStart_toEndOf="@+id/input_title_grade_edit"
                app:layout_constraintTop_toTopOf="@+id/input_title_grade_edit" />

            <EditText
                android:id="@+id/input_grade_grade_edit"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:autofillHints="Noten wert"
                android:ems="3"
                android:hint="@string/grade"
                android:inputType="numberDecimal"
                android:textSize="25sp"
                app:layout_constraintEnd_toStartOf="@+id/button_delete_grade"
                app:layout_constraintStart_toEndOf="@+id/input_weight_grade_edit"
                app:layout_constraintTop_toTopOf="@+id/input_weight_grade_edit" />

            <Button
                android:id="@+id/button_delete_grade"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/design_default_color_error"
                app:icon="@drawable/icon_delete"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:layout_constraintEnd_toStartOf="@+id/button_save_grade"
                app:layout_constraintTop_toTopOf="@+id/input_grade_grade_edit" />

            <Button
                android:id="@+id/button_save_grade"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:backgroundTint="#347036"
                app:icon="@drawable/icon_save"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/button_delete_grade" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>